# rocmdr

./: .gitignore  README.md
src/: .cproject  .project  CMakeLists.txt  README  wscript
src/.cmake/modules/: FindGenGetOpt.cmake
src/libs/: CMakeLists.txt  wscript_build
src/libs/cxxtest/: .cproject  .project  wscript_build
src/libs/cxxtest/cxxtest/: Descriptions.h  LinkedList.cpp
src/libs/dense_hashmap/: .cproject  .project  wscript_build
src/libs/libcppthread/: .cproject  .project  CMakeLists.txt  bind.hpp  pthread.cpp  pthread.hpp  pthreadfactory.cpp  pthreadfactory.hpp  thread.cpp  thread.hpp  threadfactory.cpp  threadfactory.hpp
src/libs/libcsv/: .cproject  .project  CMakeLists.txt  wscript_build
src/libs/libcsv/inc/: CSVIntProcessor.h  CSVNullProcessor.h  CSVProcessor.h  CSVReader.h  csv.h
src/libs/libcsv/src/: CSVIntProcessor.cpp  CSVReader.cpp  libcsv.c
src/libs/libcxxtest/: .cproject  .project  CMakeLists.txt
src/libs/libcxxtest/cxxtest/: LinkedList.cpp
src/libs/librocmdr/: .cproject  .project  CMakeLists.txt
src/libs/librocmdr/inc/: Config.h  Filter.h  InteractionBatch.h  NullFilter.h  RecursionState.h  RestrictFilter.h  RocMdrBatch.h  RocMdrPairBatch.h  RocMdrRestrictedBatch.h  RocMdrResult.h  RocMdrVisitor.h
src/libs/librocmdr/src/: Config.cpp  InteractionBatch.cpp  NullFilter.cpp  RecursionState.cpp  RestrictFilter.cpp  RocMdrAnalysis.cpp  RocMdrBatch.cpp  RocMdrPairBatch.cpp  RocMdrRestrictedBatch.cpp  RocMdrResult.cpp  RocMdrVisitor.cpp
src/libs/rocmdrlib/: .cproject  .project  wscript_build
src/libs/rocmdrlib/inc/: Cell.h  CellComparator.h  ColumnData.h  ColumnDiscretizer.h  ColumnHasher.h  ColumnTransformer.h  NoAssociationSimulator.h  PhenotypeMapping.h  RocMdrAnalysis.h  RocMdrBatch.h  normal.h  rocmdrlib.h
src/libs/rocmdrlib/src/: ColumnDiscretizer.cpp  ColumnHasher.cpp  NoAssociationSimulator.cpp  PhenotypeMapping.cpp  RocMdrAnalysis.cpp  (+3 more)
src/programs/: CMakeLists.txt  wscript_build
src/programs/extract_column/: column_config.cfg.example  extract_column.py
src/programs/rocmdr/: .cproject  .project  CMakeLists.txt  parsing.cpp  parsing.h  rocmdr.cpp  rocmdr.ggo  wscript_build
src/programs/rocmdr_snp/: .cproject  .project  CMakeLists.txt  PairReader.cpp  PairReader.h  RestrictReader.cpp  RestrictReader.h  cmdline.c  cmdline.h  rocmdr_snp.cpp  rocmdr_snp.ggo  wscript_build
src/rocmdrlib/: wscript
src/scripts/verification/: association_analysis.r  effect_size_analysis.r  generate.r  plot_analysis.r  plot_effect.r  plot_power.r  rocmdr_call.r  snp_interaction_analysis.r  two_interaction_analysis.r
src/unittests/: .cproject  .project  CMakeLists.txt  CSVIntProcessorTest.h  ColumnDataTestSuite.h  ColumnDiscretizerTest.h  ColumnHasherTest.h  InteractionBatchTest.h  PhenotypeMappingTest.h  RocMdrAnalysisTest.h  RocMdrBatchTest.h  cubetest.h  main.cpp  wscript_build  wscript_run_tests  wscript_test
src/waf/: waf
src/waf/.svn/: all-wcprops  dir-prop-base  entries
(+109 files in other folders)
